fix(sanar-ui): remove overflow y text editor

--- a/packages/sanar-ui/src/Components/Molecules/TextEditor/style.less
+++ b/packages/sanar-ui/src/Components/Molecules/TextEditor/style.less
@@ -50,6 +50,10 @@
         }
     }
 
+    & .cke_browser_ios .cke_contents {
+        overflow-y: hidden;
+    }
+
     & .cke_button_icon.cke_button__bold_icon,
     & .cke_button_icon.cke_button__italic_icon,
     & .cke_button_icon.cke_button__link_icon,
